# gst-opencv-detector

./: .gitignore  LICENSE  README.md  meson.build
examples/: detections_client.py
src/: detections_list.h  detections_list_server.cpp  detections_list_server.h  detections_list_subscriber.cpp  detections_list_subscriber.h  detections_list_subscriber_manager.cpp  detections_list_subscriber_manager.h  gstopencv-utils.cpp  gstopencv-utils.h  gstopencvdetector.cpp  gstopencvdetector.h  gstopencvserver.cpp  gstopencvserver.h  meson.build  message.h  object_detector.cpp  object_detector.h
src/schema/: README.md  detections_list.fbs
subprojects/: .gitignore
